# rocrdigital

./: .gitignore
.claude/: settings.local.json
.github/workflows/: release-panel.yml
memory-bank/: activeContext.md  implementationPlan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
rocr-backend/: .env.example  .gitignore  README.md  package.json  tsconfig.json
rocr-backend/src/: index.ts
rocr-backend/src/db/: index.ts  seed.ts
rocr-backend/src/middleware/: auth.ts  error.ts  index.ts  rateLimiter.ts  roles.ts
rocr-backend/src/routes/: auth.ts  calendar.ts  contacts.ts  content.ts  health.ts  index.ts  projects.ts  schedule.ts  tasks.ts  time.ts  users.ts
rocr-backend/src/utils/: jwt.ts  password.ts  sanitize.ts
rocr-landing/: .gitignore  components.json  index.html  package.json  vite.config.js
rocr-landing/src/: App.jsx  index.css  main.jsx
rocr-landing/src/components/: About.jsx  ColorBends.jsx  Contact.jsx  FadeIn.jsx  Footer.jsx  Hero.jsx  InfiniteLogoScroll.jsx  Navbar.jsx  Partners.jsx  SEO.jsx  Services.jsx  TitleGraphic.jsx
rocr-landing/src/config/: site.js
rocr-landing/src/context/: ThemeContext.jsx
rocr-landing/src/layouts/: MainLayout.jsx
rocr-landing/src/pages/: AboutPage.jsx  ContactPage.jsx  HomePage.jsx  PartnersPage.jsx  ServicesPage.jsx  SiteMapPage.jsx
rocr-panel/: .gitignore  index.html  package.json  vite.config.js
rocr-panel/src/: App.svelte  app.css  main.js
rocr-panel/src-tauri/: Cargo.toml  gen-icons.ps1  tauri.conf.json
rocr-panel/src-tauri/src/: lib.rs  main.rs
(+30 files in other folders)
