[package]
name = "rocr-panel"
version = "0.1.0"
description = "ROCR Digital Admin Panel"
authors = ["ROCR Digital"]
edition = "2021"

[lib]
name = "rocr_panel_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde_json = "1"
